tests/integration/commands/validate/03_doctype_incorrect_encoding/test.itest
RUN: %reqif validate %S/sample.reqif | filecheck %s --dump-input=fail

CHECK: warning: semantic error: ReqIF Implementation Guide recommends using UTF-8 encoding for ReqIF files. Every ReqIF document should have the following line: <?xml version="1.0" encoding="UTF-8"?>
CHECK: Validation complete with 0 errors, 0 schema issues found, 1 semantic issues found.
